[package]
name = "fieldlee"
version = "0.1.0"
edition = "2021"

[dependencies]
#axum
axum ={version="0.5.4",features = ["multipart"] }
tokio = { version = "1.18.1",features = ["full"] }
tower ={version="0.4.0",features = ["full"] }
tower-http = { version = "0.3.2", features = ["full"] }
#serde and json and ymal
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
serde_yaml = "0.8.23"
#log
log = "0.4.17"
fast_log = { version="1.5.1", features = ["lz4","zip", "gzip"]}
#redis
redis = { version = "0.21.5", features = ["tokio"] }
#对象存储
state = { version = "0.5.3", features = ["tls"] }
getset = "0.1.2"
# rbatis
rbson = "2.0"
rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
validator = "0.15.0"
validator_derive = "0.15.0"